.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micasino-api
spec:
  replicas: 2  # Dos réplicas para alta disponibilidad
  selector:
    matchLabels:
      app: micasino-api
  template:
    metadata:
      labels:
        app: micasino-api
    spec:
      containers:
      - name: api
        image: us-central1-docker.pkg.dev/micasino-devops-challenge/go-challenge-repo/go-challenge-api:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: env-file
          mountPath: /app/.env
          subPath: .env
      volumes:
      - name: env-file
        configMap:
          name: api-config
          items:
          - key: .env
            path: .env
