.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        pathType: Prefix
        backend:
          service:
            name: micasino-api
            port:
              number: 80
      - path: /dev-api/*
        pathType: Prefix
        backend:
          service:
            name: micasino-api-dev
            port:
              number: 80
